BELWEB-857: Save / cancel buttons in modals were no longer visible

--- a/grunt/sass/core/_scaffold.scss
+++ b/grunt/sass/core/_scaffold.scss
@@ -16,9 +16,7 @@ html {
 }
 // Body
 //
-body {
-  position: relative;
-  padding-top: $rh-lrg * 2; // Nav bar height * 2
+.body {
   min-width: 300px;
   background-color: $color-background;
   color: $color-text;
@@ -26,6 +24,10 @@ body {
   @include fsRem($font-size-base);
   font-weight: $font-weight-base;
   line-height: lh($line-height-base);
+  &--adjusted {
+    position: relative;
+    padding-top: $rh-lrg * 2; // Nav bar height * 2
+  }
 }
 
 
